Add more items to cloudprober child object
Adding absent items which create pods

Related-Prod: PRODX-34784
Change-Id: Ifa75beac21ca000a8bf58718a37575bfa6fb04a5

--- a/openstack_controller/templates/child_objects/cloudprober.yaml
+++ b/openstack_controller/templates/child_objects/cloudprober.yaml
@@ -1,1 +1,11 @@
-{}
+cloudprober:
+  Deployment:
+    openstack-cloudprober:
+      hash_fields: []
+      images:
+      - cloudprober_openstack_discovery
+      - cloudprober
+      manifest: deployment
+      pod_labels:
+        application: cloudprober
+        component: prober
