--- a/openstack_controller/templates/child_objects/coordination.yaml
+++ b/openstack_controller/templates/child_objects/coordination.yaml
@@ -1,1 +1,19 @@
-{}
+etcd:
+  CronJob:
+    etcd-db-compaction:
+      hash_fields: []
+      images:
+      - etcd_db_compact
+      manifest: cron_job_db_compact
+      pod_labels:
+        application: etcd
+        component: db-compact
+  StatefulSet:
+    etcd-etcd:
+      hash_fields: []
+      images:
+      - etcd
+      manifest: statefulset
+      pod_labels:
+        application: etcd
+        component: server
