Add more items to database child object
Adding absent items which create pods

Related-Prod: PRODX-34784
Change-Id: I16c681f15bfd618224ed813b621d95a603e1fcaa

--- a/openstack_controller/templates/child_objects/database.yaml
+++ b/openstack_controller/templates/child_objects/database.yaml
@@ -1,10 +1,77 @@
 {%- from 'macros/connections.j2' import to_child_object %}
 mariadb:
+  CronJob:
+    mariadb-phy-backup:
+      hash_fields: []
+      images:
+      - mariadb_phy_backup
+      manifest: cron_job_mariadb_phy_backup
+      pod_labels:
+        application: mariadb
+        component: backup
+  Deployment:
+    mariadb-controller:
+      hash_fields: []
+      images:
+      - mariadb_controller
+      manifest: deployment_controller
+      pod_labels:
+        application: mariadb
+        component: controller
+    mariadb-ingress:
+      hash_fields: []
+      images:
+      - mariadb_ingress
+      manifest: deployment_ingress
+      pod_labels:
+        application: mariadb
+        component: ingress
+    mariadb-ingress-error-pages:
+      hash_fields: []
+      images:
+      - error_pages
+      manifest: deployment_error
+      pod_labels:
+        application: mariadb
+        component: ingress-error-pages
+  Job:
+    exporter-create-sql-user:
+      hash_fields: []
+      images:
+      - prometheus_create_mysql_user
+      manifest: ''
+      pod_labels:
+        application: prometheus-mysql-exporter
+        component: create-sql-user
+    mariadb-phy-restore:
+      hash_fields: []
+      images:
+      - mariadb_phy_restore
+      manifest: job_mariadb_phy_restore
+      pod_labels:
+        application: mariadb
+        component: restore
+    openstack-mariadb-cluster-wait:
+      hash_fields: []
+      images:
+      - mariadb_scripted_test
+      manifest: job_cluster_wait
+      pod_labels:
+        application: mariadb
+        component: cluster-wait
   StatefulSet:
     mariadb-server:
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql", "wsrep", "ist", "sst"]) | indent(12)}}
       hash_fields: []
-      images: []
-      manifest: ''
+      images:
+      - mariadb
+      - prometheus_mysql_exporter
+      manifest: statefulset
+      pod_labels:
+        application: mariadb
+        component: server
       ports:
         - protocol: TCP
           port: 3306
@@ -21,20 +88,3 @@ mariadb:
         - protocol: TCP
           port: 4444
           name: sst
-      pod_labels:
-        application: mariadb
-        component: server
-      connections:
-        egress:
-          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql", "wsrep", "ist", "sst"]) | indent(12)}}
-  Job:
-    exporter-create-sql-user:
-      hash_fields: []
-      images:
-      - prometheus_create_mysql_user
-      manifest: ''
-    openstack-mariadb-cluster-wait:
-      hash_fields: []
-      images:
-      - mariadb_scripted_test
-      manifest: job_cluster_wait
