--- a/openstack_controller/templates/child_objects/dns.yaml
+++ b/openstack_controller/templates/child_objects/dns.yaml
@@ -7,6 +7,9 @@ designate:
       images:
       - bootstrap
       manifest: job_bootstrap
+      pod_labels:
+        application: designate
+        component: bootstrap
     designate-db-drop:
       hash_fields:
       - endpoints.oslo_db.*
@@ -19,35 +22,53 @@ designate:
       images:
       - db_init
       manifest: job_db_init
+      pod_labels:
+        application: designate
+        component: db-init
     designate-db-sync:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - designate_db_sync
       manifest: job_db_sync
+      pod_labels:
+        application: designate
+        component: db-sync
     designate-ks-endpoints:
       hash_fields: []
       images:
       - ks_endpoints
       manifest: job_ks_endpoints
+      pod_labels:
+        application: designate
+        component: ks-endpoints
     designate-ks-service:
       hash_fields: []
       images:
       - ks_service
       manifest: job_ks_service
+      pod_labels:
+        application: designate
+        component: ks-service
     designate-ks-user:
       hash_fields:
       - endpoints.*
       images:
       - ks_user
       manifest: job_ks_user
+      pod_labels:
+        application: designate
+        component: ks-user
     designate-pool-manage:
       hash_fields:
       - endpoints.oslo_db_powerdns.*
       images:
-      - designate_pool_manage_hash
       - designate_pool_manage
+      - designate_pool_manage_hash
       manifest: job_pool_manage
+      pod_labels:
+        application: designate
+        component: pool-manage
     designate-powerdns-db-init:
       hash_fields:
       - endpoints.oslo_db_powerdns.*
@@ -60,6 +81,45 @@ designate:
       images:
       - powerdns_db_sync
       manifest: job_powerdns_db_sync
+      pod_labels:
+        application: designate
+        component: powerdns-db-sync
+  StatefulSet:
+    designate-api:
+      hash_fields: []
+      images:
+      - designate_api
+      manifest: statefulset_api
+      pod_labels:
+        application: designate
+        component: api
+    designate-central:
+      hash_fields: []
+      images:
+      - ks_user
+      - designate_central
+      manifest: statefulset_central
+      pod_labels:
+        application: designate
+        component: central
+    designate-mdns:
+      hash_fields: []
+      images:
+      - designate_mdns
+      - designate_worker
+      - powerdns
+      manifest: statefulset_mdns
+      pod_labels:
+        application: designate
+        component: mdns
+    designate-producer:
+      hash_fields: []
+      images:
+      - designate_producer
+      manifest: statefulset_producer
+      pod_labels:
+        application: designate
+        component: producer
 rabbitmq:
   Job:
     openstack-designate-rabbitmq-cluster-wait:
