Add more items to ingress child object
Adding absent items which create pods

Related-Prod: PRODX-34784
Change-Id: I9b76aa74ad257e13d8ee0214385455e5bce2dc78

--- a/openstack_controller/templates/child_objects/ingress.yaml
+++ b/openstack_controller/templates/child_objects/ingress.yaml
@@ -1,1 +1,21 @@
-{}
+ingress:
+  DaemonSet:
+    ingress:
+      hash_fields: []
+      images:
+      - ingress
+      - ingress_module_init
+      - ingress_tls_proxy
+      manifest: deployment_ingress
+      pod_labels:
+        application: ingress
+        component: server
+  Deployment:
+    ingress-error-pages:
+      hash_fields: []
+      images:
+      - error_pages
+      manifest: deployment_error
+      pod_labels:
+        application: ingress
+        component: error-pages
