--- a/openstack_controller/templates/child_objects/load-balancer.yaml
+++ b/openstack_controller/templates/child_objects/load-balancer.yaml
@@ -1,4 +1,46 @@
 octavia:
+  DaemonSet:
+    octavia-health-manager:
+      hash_fields: []
+      images:
+      - openvswitch_vswitchd
+      - octavia_health_manager
+      manifest: daemonset_health_manager
+      pod_labels:
+        application: octavia
+        component: health_manager
+      selector:
+        application__in:
+        - octavia
+        component__in:
+        - health_manager
+      type: dynamic
+  Deployment:
+    octavia-api:
+      hash_fields: []
+      images:
+      - octavia_api
+      - octavia_driver_agent
+      manifest: deployment_api
+      pod_labels:
+        application: octavia
+        component: api
+    octavia-housekeeping:
+      hash_fields: []
+      images:
+      - octavia_housekeeping
+      manifest: deployment_housekeeping
+      pod_labels:
+        application: octavia
+        component: housekeeping
+    octavia-worker:
+      hash_fields: []
+      images:
+      - octavia_worker
+      manifest: deployment_worker
+      pod_labels:
+        application: octavia
+        component: worker
   Job:
     octavia-bootstrap:
       hash_fields:
@@ -7,6 +49,9 @@ octavia:
       images:
       - bootstrap
       manifest: job_bootstrap
+      pod_labels:
+        application: octavia
+        component: bootstrap
     octavia-create-resources:
       hash_fields:
       - octavia.settings.amphora_image_url
@@ -15,46 +60,70 @@ octavia:
       images:
       - create_resources
       manifest: job_create_resources
+      pod_labels:
+        application: octavia
+        component: create_resources
     octavia-db-drop:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - db_drop
       manifest: job_db_drop
+      pod_labels:
+        application: octavia
+        component: db-drop
     octavia-db-init:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - db_init
       manifest: job_db_init
+      pod_labels:
+        application: octavia
+        component: db-init
     octavia-db-sync:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - octavia_db_sync
       manifest: job_db_sync
+      pod_labels:
+        application: octavia
+        component: db-sync
     octavia-db-sync-persistence:
       hash_fields:
       - endpoints.oslo_db.*
       images:
       - octavia_db_sync_persistence
       manifest: job_db_sync_persistence
+      pod_labels:
+        application: octavia
+        component: db-sync-persistence
     octavia-ks-endpoints:
       hash_fields: []
       images:
       - ks_endpoints
       manifest: job_ks_endpoints
+      pod_labels:
+        application: octavia
+        component: ks-endpoints
     octavia-ks-service:
       hash_fields: []
       images:
       - ks_service
       manifest: job_ks_service
+      pod_labels:
+        application: octavia
+        component: ks-service
     octavia-ks-user:
       hash_fields:
       - endpoints.*
       images:
       - ks_user
       manifest: job_ks_user
+      pod_labels:
+        application: octavia
+        component: ks-user
 rabbitmq:
   Job:
     openstack-octavia-rabbitmq-cluster-wait:
