Add more items to memcached child object
Adding absent items which create pods

Related-Prod: PRODX-34784
Change-Id: Iaa923f8d6dadf39454044d6a350627a0b2292b83

--- a/openstack_controller/templates/child_objects/memcached.yaml
+++ b/openstack_controller/templates/child_objects/memcached.yaml
@@ -1,1 +1,11 @@
-{}
+memcached:
+  StatefulSet:
+    openstack-memcached-memcached:
+      hash_fields: []
+      images:
+      - memcached
+      - prometheus_memcached_exporter
+      manifest: statefulset
+      pod_labels:
+        application: memcached
+        component: server
