Add more items to messaging child object
Adding absent items which create pods

Related-Prod: PRODX-34784
Change-Id: Id136b51270c2c3f7548e39628e0e1f68f7bd0bf8

--- a/openstack_controller/templates/child_objects/messaging.yaml
+++ b/openstack_controller/templates/child_objects/messaging.yaml
@@ -6,3 +6,17 @@ rabbitmq:
       images:
       - rabbitmq_scripted_test
       manifest: job_cluster_wait
+      pod_labels:
+        application: rabbitmq
+        component: cluster-wait
+  StatefulSet:
+    openstack-rabbitmq-rabbitmq:
+      hash_fields: []
+      images:
+      - rabbitmq_init
+      - rabbitmq
+      manifest: statefulset
+      pod_labels:
+        application: rabbitmq
+        component: server
+        release_group: openstack-rabbitmq-rabbitmq
